2011-03-09  Werner Koch  <wk@g10code.com>

	* assuan-handler.c (assuan_register_command): Use my_strcasecmp.

2011-03-06  Ben Kibbey <bjk@luxsci.net>

	* assuan-socket-connect.c (assuan_socket_connect_fd): Finalize a
	context connection from an already connected socket descriptor.
	* assuan.h.in (assuan_socket_connect_fd): New prototype.

2011-03-05  Ben Kibbey <bjk@luxsci.net>

	* assuan-handler.c (assuan_register_command): Let an existing command
	be updated to the new values.

2011-02-28  Werner Koch  <wk@g10code.com>

	* libassuan.vers: Fold LIBASSUAN_1.1 block into LIBASSUAN_1.0.

2011-02-28  Ben Kibbey  <bjk@luxsci.net>

	* assuan-handler.c (assuan_register_pre_cmd_notify): Pass command
	string as second argument.
	* assuan.h (assuan_command_t): Move back to assuan-defs.h.

2011-02-24  Ben Kibbey  <bjk@luxsci.net>

	* assuan-handler.c (assuan_register_pre_cmd_notify): New callback.
	* assuan.h (assuan_command_t): Register command object.
	(pre_cmd_notify_fnc): New prototype.

2011-02-03  Marcus Brinkmann  <marcus@g10code.com>

	* assuan-socket.c (_assuan_sock_new): Call _assuan_socket instead
	of socket.
	(_assuan_sock_connect): Call _assuan_connect instead of connect.
	* assuan-socket-connect.c (assuan_socket_connect): Call
	_assuan_sock_new and _assuan_sock_connect instead of
	_assuan_socket and assuan_connect.
	* src/system-w32.c, src/system-w32ce.c (__assuan_socket): Call
	socket instead of _assuan_sock_new.
	(__assuan_connect): Call connect instead of _assuan_sock_connect.

2011-02-02  Marcus Brinkmann  <mb@g10code.com>

	* assuan.h.in: Replace namespace by _namespace.

2011-02-02  Marcus Brinkmann  <mb@g10code.com>

	* assuan-defs.h (_assuan_socket, _assuan_connect): New prototypes.
	* assuan.h.in (ASSUAN_SYSTEM_HOOKS_VERSION): Bumped to 2.
	(struct assuan_system_hooks): Add socket and connect members.
	(__assuan_socket, __assuan_connect): New prototypes.
	(_ASSUAN_SYSTEM_PTH_IMPL): Add socket and connect members.  *