@@ -1,3 +1,7 @@
+2011-03-30  Werner Koch  <wk@g10code.com>
+
+	* sysutils.c (_assuan_sysutils_blurb): Add version string.
+
 2011-03-09  Werner Koch  <wk@g10code.com>
 
 	* assuan-handler.c (assuan_register_command): Use my_strcasecmp.
